# nim_bipf

./: .gitignore  CMakeLists.txt  README.md  benchmark-result.md  nim.cfg  nim_bipf.nimble  package-lock.json  package.json
.github/workflows/: ci.yml  node.js.yml
src/: nim_bipf.nim  nim_bipf_purejs.nim
src/js/: index.nim  nodebuffer.nim
src/js/nodejs/: binding.nim
src/nim_bipf/: atom.nim  bpath.nim  builder.nim  common.nim  reader.nim  seeker.nim  serde_json.nim  submodule.nim
src/nim_bipf/js/: index.nim
src/nim_bipf/js/nodejs/: binding.nim
src/nim_bipf/private/: bytebuffer.nim  bytebuffer_drop.nim  deser.nim  logging.nim  varint.nim
src/nim_bipf/private/backend/: c.nim  js.nim  nodebuffer.nim
tests/: bench_encode.nim  fakeData.json  fakeData2.json  spec-fixtures.json  test1.nim  test_builder  test_builder.nim  test_bytebuffer.nim
tests-js/: benchmarks.js  compare.js  fixtures.js  generate-bench-fixture.js  index.js  perf.js  ssb2-anchor.js  test-cel.json  wasm.js
